# Graphics-HmxsRenderer

./: .gitignore  CMakeLists.txt  buffer.cpp  buffer.h  callbacks.h  color.h  color_buffer.cpp  color_buffer.h  component-gameobject.cpp  component-gameobject.h  game_object.cpp  game_object.h  ishader.cpp  ishader.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.h  tga_handler.cpp  tga_handler.h  win32_wnd.cpp  win32_wnd.h  win32wnd.cpp  win32wnd.h
core/: buffer.cpp  buffer.h  color.h  color_buffer.cpp  color_buffer.h  renderer.cpp  renderer.h
display/: win32_wnd.cpp  win32_wnd.h
docs/: README.md  class_diagram.puml
include/core/: buffer.h  color.h  component-gameobject.h  ishader.h  model.h  renderer.h  scene.h
include/core/maths/: maths.h  matrix.h  vector.h
include/core/utility/: frame_timer.h  log.h
include/platform/win32/: win32_wnd.h
maths/: maths.h  matrix.h  vector.h
src/: main.cpp
src/core/: CMakeLists.txt  buffer.cpp  component-gameobject.cpp  ishader.cpp  model.cpp  renderer.cpp  scene.cpp  tga_handler.cpp
src/platform/win32/: CMakeLists.txt  win32_wnd.cpp
utility/: frame_timer.cpp  frame_timer.h
